# shinnku-riir

./: .gitignore  Cargo.toml
client/: index.html  package.json  pnpm-lock.yaml
client/src/: index.css  index.tsx
client/src/components/GameListItem/: ItemIcon.tsx  index.tsx
client/src/components/fold-container/: index.tsx
client/src/components/icons/: KrKrIcon.tsx  OnesIcon.tsx  iconInterface.ts
client/src/components/search/: index.tsx
client/src/i18n/: ui.ts  utils.ts
client/src/pages/(home)/: index.tsx
meta_manage/: Cargo.toml
meta_manage/src/: main.rs  search.rs
migrate/: migrate_00001_create_hot_stat.sql
server/: Cargo.toml
server/src/: config.rs  file_list.rs  hot.rs  main.rs
server/src/api/: download.rs  hot_top.rs  mod.rs
server/src/drivers/: mod.rs  onedrive.rs
src/: ai_search.rs  config.rs  file_list_loader.rs  file_meta.rs  main.rs  vfs.rs
