[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-web = "4.9.0"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.16", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.20", features = ["derive"] }
meilisearch-sdk = "0.27.1"
redis = "0.27"
toml = "0.8"