[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1"
actix-web = "4.9.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = {workspace = true}
serde_json = {workspace = true}
chrono = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
anyhow = {workspace = true}
uuid = {workspace = true}
sqlx = {workspace = true}
tracing-subscriber = "0.3.18"
clap = { version = "4.5.20", features = ["derive"] }

redis = { version = "0.27", features = ["aio", "connection-manager", "tokio-comp"] }
rand = "0.8.5"
